--- a/.github/workflows/main_mindstride-chatbot-dev.yml
+++ b/.github/workflows/main_mindstride-chatbot-dev.yml
@@ -21,13 +21,15 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'
+          node-version: "22.x"
 
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+        env:
+          NEXT_PUBLIC_BASE_URL: ${{ vars.NEXT_PUBLIC_GEMINI_API_KEY }}
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -38,18 +40,18 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
-      - name: 'Deploy to Azure Web App'
+
+      - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'mindstride-chatbot-dev'
-          slot-name: 'Production'
+          app-name: "mindstride-chatbot-dev"
+          slot-name: "Production"
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A9D76FC3D9DA494886269EAD06A4184E }}
