--- a/.github/workflows/main_mindstride-chatbot-dev.yml
+++ b/.github/workflows/main_mindstride-chatbot-dev.yml
@@ -34,8 +34,9 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: mindstride-chatbot-dev-app
+          include-hidden-files: true
+          path: ./.next/standalone
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,7 +46,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: mindstride-chatbot-dev-app
 
       - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
