--- a/.github/workflows/main_mindstride-chatbot-dev.yml
+++ b/.github/workflows/main_mindstride-chatbot-dev.yml
@@ -29,7 +29,7 @@ jobs:
           npm run build --if-present
           npm run test --if-present
         env:
-          NEXT_PUBLIC_BASE_URL: ${{ vars.NEXT_PUBLIC_GEMINI_API_KEY }}
+          NEXT_PUBLIC_GEMINI_API_KEY: ${{ vars.NEXT_PUBLIC_GEMINI_API_KEY }}
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
