--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@google/genai": "^1.27.0",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-date-pickers": "^8.17.0",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.552.0",
     "next": "16.0.0",
